# dcl-rpc-on-napi-rs

./: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/service/: book_service.rs
